Apple oauth login added. User model changes. Swag updated.
