# controllers/oauth2.go
@@ -11,6 +11,7 @@ import (
 	"net/http"
 	"os"
 
+	"github.com/Timothylock/go-signin-with-apple/apple"
 	jwt "github.com/appleboy/gin-jwt/v2"
 	"github.com/gin-gonic/gin"
 	"golang.org/x/oauth2"
@@ -25,23 +26,147 @@ var (
 	oauthStateString = "kantan-login"
 
 	errFailedLogin = "failed to login"
+
+	errWrongLoginMethod = "Failed to login. This email is already registered with different login method."
 )
 
 const tokenExpiration = 259200
 
-func SetOAuth2() {
-	googleOauthConfig = &oauth2.Config{
-		RedirectURL:  "http://localhost:8080/callback",
-		ClientID:     os.Getenv("GOOGLE_CLIENT_ID"),
-		ClientSecret: os.Getenv("GOOGLE_CLIENT_SECRET"),
-		Scopes:       []string{"https://www.googleapis.com/auth/userinfo.email"},
-		Endpoint:     google.Endpoint,
-	}
-}
+// OAuth2 Apple Login
+// @Summary OAuth2 Apple Login
+// @Description Gets user info from apple and creates/finds user and returns token
+// @Tags oauth2
+// @Accept application/json
+// @Produce application/json
+// @Success 200 {string} string "Token"
+// @Failure 500 {string} string
+// @Router /oauth/apple [post]
+func (o *OAuth2Controller) OAuth2AppleLogin(jwt *jwt.GinJWTMiddleware) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		var data requests.AppleSignin
+		if shouldReturn := bindJSONData(&data, c); shouldReturn {
+			return
+		}
 
-func (o *OAuth2Controller) GoogleLogin(c *gin.Context) {
-	url := googleOauthConfig.AuthCodeURL(oauthStateString)
-	http.Redirect(c.Writer, c.Request, url, http.StatusTemporaryRedirect)
+		teamID := os.Getenv("TEAM_ID")
+		clientID := os.Getenv("CLIENT_ID")
+		keyID := os.Getenv("KEY_ID")
+		secretKey := os.Getenv("SECRET_KEY")
+
+		secret, err := apple.GenerateClientSecret(secretKey, teamID, clientID, keyID)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			return
+		}
+
+		appleClient := apple.New()
+
+		if *data.IsRefresh {
+			refreshRequest := apple.ValidationRefreshRequest{
+				ClientID:     clientID,
+				ClientSecret: secret,
+				RefreshToken: data.Code,
+			}
+
+			var refreshResp apple.RefreshResponse
+
+			err = appleClient.VerifyRefreshToken(context.Background(), refreshRequest, &refreshResp)
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+				return
+			}
+
+			if refreshResp.Error != "" || refreshResp.AccessToken == "" {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": (refreshResp.Error + " " + refreshResp.ErrorDescription)})
+				return
+			}
+
+			var user models.User
+			user, err = models.FindUserByRefreshToken(data.Code)
+
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+				return
+			}
+
+			if !user.IsOAuthUser || (user.IsOAuthUser && user.OAuthType != 1) {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": errWrongLoginMethod})
+				return
+			}
+
+			token, _, err := jwt.TokenGenerator(user)
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+				return
+			}
+
+			c.SetCookie("jwt", token, tokenExpiration, "/", os.Getenv("BASE_URI"), true, true)
+			c.JSON(http.StatusOK, gin.H{"access_token": token})
+
+			return
+		} else {
+			req := apple.AppValidationTokenRequest{
+				ClientID:     clientID,
+				ClientSecret: secret,
+				Code:         data.Code,
+			}
+
+			var resp apple.ValidationResponse
+
+			err = appleClient.VerifyAppToken(context.Background(), req, &resp)
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+				return
+			}
+
+			if resp.Error != "" {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": (resp.Error + " " + resp.ErrorDescription)})
+				return
+			}
+
+			claim, err := apple.GetClaims(resp.IDToken)
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+				return
+			}
+
+			email := (*claim)["email"].(string)
+
+			var user models.User
+			user, _ = models.FindUserByEmail(email)
+			if user.EmailAddress == "" {
+				oAuthUser, err := models.CreateOAuthUser(email, &resp.RefreshToken, 1)
+				if err != nil {
+					c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+					return
+				}
+
+				user = *oAuthUser
+			}
+
+			if !user.IsOAuthUser || (user.IsOAuthUser && user.OAuthType != 1) {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": errWrongLoginMethod})
+				return
+			}
+
+			user.RefreshToken = &resp.RefreshToken
+			if err := models.UpdateUser(user); err != nil {
+				if err != nil {
+					c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+					return
+				}
+			}
+
+			token, _, err := jwt.TokenGenerator(user)
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+				return
+			}
+
+			c.SetCookie("jwt", token, tokenExpiration, "/", os.Getenv("BASE_URI"), true, true)
+			c.JSON(http.StatusOK, gin.H{"access_token": token, "refresh_token": resp.RefreshToken})
+		}
+	}
 }
 
 // OAuth2 Google Login
@@ -88,13 +213,18 @@ func (o *OAuth2Controller) OAuth2GoogleLogin(jwt *jwt.GinJWTMiddleware) gin.Hand
 		user, _ = models.FindUserByEmail(googleToken.Email)
 
 		if user.EmailAddress == "" {
-			oAuthUser, err := models.CreateOAuthUser(googleToken.Email)
+			oAuthUser, err := models.CreateOAuthUser(googleToken.Email, nil, 0)
 			if err != nil {
 				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 				return
 			}
 
 			user = *oAuthUser
+		}
+
+		if !user.IsOAuthUser || (user.IsOAuthUser && user.OAuthType != 0) {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": errWrongLoginMethod})
+			return
 		}
 
 		token, _, err := jwt.TokenGenerator(user)
@@ -106,6 +236,21 @@ func (o *OAuth2Controller) OAuth2GoogleLogin(jwt *jwt.GinJWTMiddleware) gin.Hand
 		c.SetCookie("jwt", token, tokenExpiration, "/", os.Getenv("BASE_URI"), true, true)
 		c.JSON(http.StatusOK, gin.H{"access_token": token})
 	}
+}
+
+func SetOAuth2() {
+	googleOauthConfig = &oauth2.Config{
+		RedirectURL:  "http://localhost:8080/callback",
+		ClientID:     os.Getenv("GOOGLE_CLIENT_ID"),
+		ClientSecret: os.Getenv("GOOGLE_CLIENT_SECRET"),
+		Scopes:       []string{"https://www.googleapis.com/auth/userinfo.email"},
+		Endpoint:     google.Endpoint,
+	}
+}
+
+func (o *OAuth2Controller) GoogleLogin(c *gin.Context) {
+	url := googleOauthConfig.AuthCodeURL(oauthStateString)
+	http.Redirect(c.Writer, c.Request, url, http.StatusTemporaryRedirect)
 }
 
 // Google Callback
@@ -142,7 +287,7 @@ func (o *OAuth2Controller) GoogleCallback(jwt *jwt.GinJWTMiddleware) gin.Handler
 		user, _ = models.FindUserByEmail(authGoogle.Email)
 
 		if user.EmailAddress == "" {
-			oAuthUser, err := models.CreateOAuthUser(authGoogle.Email)
+			oAuthUser, err := models.CreateOAuthUser(authGoogle.Email, nil, 0)
 			if err != nil {
 				c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 				return
