# docs/swagger.json
@@ -273,7 +273,7 @@
                         "enum": [
                             "weekly",
                             "monthly",
-                            "3monthly"
+                            "yearly"
                         ],
                         "type": "string",
                         "name": "interval",
@@ -1518,6 +1518,35 @@
                 }
             }
         },
+        "/oauth/apple": {
+            "post": {
+                "description": "Gets user info from apple and creates/finds user and returns token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth2"
+                ],
+                "summary": "OAuth2 Apple Login",
+                "responses": {
+                    "200": {
+                        "description": "Token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/oauth/google": {
             "post": {
                 "description": "Gets user info from google and creates/finds user and returns token",
@@ -2262,52 +2291,6 @@
                 }
             }
         },
-        "/transaction/calendar": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns number of transactions by year and month",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "transaction"
-                ],
-                "summary": "Get Number of Transactions per Day for Calendar",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authentication header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/responses.TransactionCalendarCount"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/transaction/stats": {
             "get": {
                 "security": [
@@ -2678,6 +2661,58 @@
                     }
                 }
             }
+        },
+        "/user/update-token": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Depending on logged in device fcm token will be updated",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Updates FCM User Token",
+                "parameters": [
+                    {
+                        "description": "Set token",
+                        "name": "changefcmtoken",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.ChangeFCMToken"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authentication header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -2691,11 +2726,9 @@
                     "type": "number"
                 },
                 "asset_market": {
-                    "description": "if stock the market else if crypto CMC else exchange",
                     "type": "string"
                 },
                 "asset_type": {
-                    "description": "stock, crypto etc.",
                     "type": "string"
                 },
                 "created_at": {
@@ -2711,14 +2744,12 @@
                     "type": "string"
                 },
                 "type": {
-                    "description": "sell buy",
                     "type": "string"
                 },
                 "user_id": {
                     "type": "string"
                 },
                 "value": {
-                    "description": "value in from asset currency",
                     "type": "number"
                 }
             }
@@ -3084,9 +3115,23 @@
                 }
             }
         },
+        "requests.ChangeFCMToken": {
+            "type": "object",
+            "required": [
+                "fcm_token"
+            ],
+            "properties": {
+                "fcm_token": {
+                    "type": "string"
+                }
+            }
+        },
         "requests.ChangeMembership": {
             "type": "object",
             "properties": {
+                "is_lifetime_premium": {
+                    "type": "boolean"
+                },
                 "is_premium": {
                     "type": "boolean"
                 }
@@ -3303,6 +3348,9 @@
                 },
                 "currency": {
                     "type": "string"
+                },
+                "delete_method": {
+                    "type": "boolean"
                 },
                 "description": {
                     "type": "string"
@@ -3682,18 +3730,35 @@
                 }
             }
         },
-        "responses.TransactionCalendarCount": {
+        "responses.TransactionCategoryStat": {
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string"
-                },
-                "count": {
                     "type": "integer"
+                },
+                "total_transaction": {
+                    "type": "number"
                 }
             }
         },
-        "responses.TransactionStats": {
+        "responses.TransactionCategoryStats": {
+            "type": "object",
+            "properties": {
+                "category_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.TransactionCategoryStat"
+                    }
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "total_transaction": {
+                    "type": "number"
+                }
+            }
+        },
+        "responses.TransactionDailyStats": {
             "type": "object",
             "properties": {
                 "currency": {
@@ -3703,6 +3768,26 @@
                     "type": "string"
                 },
                 "total_transaction": {
+                    "type": "number"
+                }
+            }
+        },
+        "responses.TransactionStats": {
+            "type": "object",
+            "properties": {
+                "category_stats": {
+                    "$ref": "#/definitions/responses.TransactionCategoryStats"
+                },
+                "daily_stats": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.TransactionDailyStats"
+                    }
+                },
+                "total_expense": {
+                    "type": "number"
+                },
+                "total_income": {
                     "type": "number"
                 }
             }
@@ -3727,10 +3812,16 @@
                 "email_address": {
                     "type": "string"
                 },
+                "fcm_token": {
+                    "type": "string"
+                },
                 "investing_limit": {
                     "type": "string"
                 },
                 "is_lifetime_premium": {
+                    "type": "boolean"
+                },
+                "is_oauth": {
                     "type": "boolean"
                 },
                 "is_premium": {
