# routes/oauth2.go
@@ -15,5 +15,6 @@ func oauth2Router(router *gin.RouterGroup, jwtToken *jwt.GinJWTMiddleware) {
 	oauth := router.Group("/oauth")
 	{
 		oauth.POST("/google", OAuth2Controller.OAuth2GoogleLogin(jwtToken))
+		oauth.POST("/apple", OAuth2Controller.OAuth2AppleLogin(jwtToken))
 	}
 }
